<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <artifactId>io-hotmoka-crypto</artifactId>
  <packaging>jar</packaging>
  <name>io-hotmoka-crypto</name>
  <version>${hotmoka.version}</version>

  <parent>
    <groupId>io.hotmoka</groupId>
    <artifactId>parent</artifactId>
    <version>1.0.7</version>
  </parent>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <outputDirectory>
            ../modules/explicit
          </outputDirectory>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
	<dependency>
      <groupId>io.hotmoka</groupId>
      <artifactId>io-hotmoka-beans</artifactId>
      <version>${hotmoka.version}</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk15on</artifactId>
      <version>1.70</version>
      <type>jar</type>
    </dependency>
  </dependencies>
</project>